--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,15 @@
 {
-  "tabWidth": 2,
-  "useTabs": true
+    "singleQuote": false,
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "bracketSpacing": false,
+    "jsxBracketSameLine": true,
+    "overrides": [
+        {
+            "files": "*.json",
+            "options": {
+                "tabWidth": 2
+            }
+        }
+    ]
 }
